--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-headroom": "^3.1.0",
+    "react-player": "^2.7.0",
     "react-responsive": "^8.2.0",
+    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "save": "^2.4.0",
