--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tlcj_music_temp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tabbycat01.github.io/tlcj_music",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^12.1.10",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-headroom": "^3.1.0",
@@ -31,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
