--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@testing-library/user-event": "^12.1.10",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-headroom": "^3.1.0",
@@ -54,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
